--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
         </div>
     </nav>
 
+    <!--Navabr End-->
+
+
+    <!--Hero Section -->
+    <section class="hero" id="home">
+        <main class="content">
+            <h1></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, assumenda.</p>
+            <a href="#" class="cta">Order Now</a>
+        </main>
+    </section>
     <!--Feather Icons-->
     <script>
         feather.replace()
