hero sectioan part 2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Hero Section -->
     <section class="hero" id="home">
         <main class="content">
-            <h1></h1>
+            <h1>Nikmati Hidangan Dengan Kebersamaan</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, assumenda.</p>
             <a href="#" class="cta">Order Now</a>
         </main>
