--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <a href="#" class="cta">Order Now</a>
         </main>
     </section>
+
+    <!--About Section-->
+    <section id="about" class="about">
+        <h2>Tentang Kami</h2>
+
+        <div class=""></div>
+    </section>
     <!--Feather Icons-->
     <script>
         feather.replace()
