--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
     <section id="about" class="about">
         <h2>Tentang Kami</h2>
 
-        <div class="about-img">
-            <img src="Asset/ikan_bakar.jpg" alt="Tentang Kami">
-        </div>
-        <div class="content">
-            <h3>Mengapa memilih hidangan kami?</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Laboriosam, praesentium libero, sit consequuntur quo minima
-                modi iure perspiciatis ut distinctio sunt perferendis nostrum
-                repudiandae provident pariatur in molestias eveniet autem.</p>
+        <div class="row">
+            <div class="about-img">
+                <img src="Asset/ikan-bakar.jpg" alt="Tentang Kami">
+            </div>
+            <div class="content">
+                <h3>Mengapa memilih hidangan kami?</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Laboriosam, praesentium libero, sit consequuntur quo minima
+                    modi iure perspiciatis ut distinctio sunt perferendis nostrum
+                    repudiandae provident pariatur in molestias eveniet autem.</p>
+            </div>
         </div>
     </section>
     <!--Feather Icons-->
