--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
     <!--About Section-->
     <section id="about" class="about">
-        <h2>Tentang Kami</h2>
+        <h2><span>Tentang</span> Kami</h2>
 
         <div class="row">
             <div class="about-img">
-                <img src="Asset/ikan-bakar.jpg" alt="Tentang Kami">
+                <img src="Asset/ikan-bakar2.jpg" alt="Tentang Kami">
             </div>
             <div class="content">
                 <h3>Mengapa memilih hidangan kami?</h3>
@@ -63,9 +63,24 @@
                     Laboriosam, praesentium libero, sit consequuntur quo minima
                     modi iure perspiciatis ut distinctio sunt perferendis nostrum
                     repudiandae provident pariatur in molestias eveniet autem.</p>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Laboriosam, praesentium libero, sit consequuntur quo minima
+                    modi iure perspiciatis ut distinctio sunt perferendis nostrum
+                    repudiandae provident pariatur in molestias eveniet autem.</p>
             </div>
         </div>
     </section>
+
+    <!--Menu Section-->
+
+    <section id="menu" class="menu">
+        <h2><span>Menu</span> Kami</h2>
+        <p>Kami menyediakan berbagai macam menu dari makanan hingga
+            minuman yang dapat memenuhi kebutuhan Anda.</p>
+        <div class=""></div>
+    </section>
+
     <!--Feather Icons-->
     <script>
         feather.replace()
