--- a/index.html
+++ b/index.html
@@ -79,6 +79,67 @@
         <p>Kami menyediakan berbagai macam menu dari makanan hingga
             minuman yang dapat memenuhi kebutuhan Anda.</p>
         <div class=""></div>
+
+        <div class="row">
+            <div class="menu-card">
+                <img src="Asset/ikan-bakar.jpg" alt="Ikan Bakar" class="menu-card-image">
+                <h3 class="menu-card-title">Ikan Bakar</h3>
+                <p class="menu-card-price">50k</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-card">
+                <img src="Asset/ikan-bakar.jpg" alt="Ikan Bakar" class="menu-card-image">
+                <h3 class="menu-card-title">Ikan Bakar</h3>
+                <p class="menu-card-price">50k</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-card">
+                <img src="Asset/ikan-bakar.jpg" alt="Ikan Bakar" class="menu-card-image">
+                <h3 class="menu-card-title">Ikan Bakar</h3>
+                <p class="menu-card-price">50k</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="menu-card">
+                <img src="Asset/ikan-bakar.jpg" alt="Ikan Bakar" class="menu-card-image">
+                <h3 class="menu-card-title">Ikan Bakar</h3>
+                <p class="menu-card-price">50k</p>
+            </div>
+        </div>
+    </section>
+
+    <!--Contact Section-->
+
+    <section class="contact" id="contact">
+        <h2><span>Kontak</span> Kami</h2>
+        <p>Kami menyediakan berbagai macam menu dari makanan hingga
+            minuman yang dapat memenuhi kebutuhan Anda.</p>
+
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3822.
+            4197295727663!2d102.0197879!3d-1.4090384!2m3!1f0!2f0!3f0!3m2!1i1024!2i7
+            68!4f13.1!3m3!1m2!1s0x2e2c1da38b8a3ee3%3A0x202b829170051b29!2sSaung%20
+            Bendung%20Somel!5e1!3m2!1sid!2sid!4v1718185137392!5m2!1sid!2sid" allowfullscreen="" class="maps"
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <form action="">
+                <div class="input-grup">
+                    <i data-feather="user"></i>
+                    <input type="text" placeholder="nama">
+                </div>
+                <div class="input-grup">
+                    <i data-feather="mail"></i>
+                    <input type="text" placeholder="email">
+                </div>
+                <div class="input-grup">
+                    <i data-feather="phone"></i>
+                    <input type="text" placeholder="Nomor Telepon">
+                </div>
+                <button class="button">Submit</button>
+            </form>
+        </div>
     </section>
 
     <!--Feather Icons-->
