--- a/index.html
+++ b/index.html
@@ -137,10 +137,29 @@
                     <i data-feather="phone"></i>
                     <input type="text" placeholder="Nomor Telepon">
                 </div>
-                <button class="button">Submit</button>
+                <button type="button" class="button">Submit</button>
             </form>
         </div>
     </section>
+
+    <!--Footer Awal-->
+    <footer>
+        <div class="sosmed">
+            <a href="#"><i data-feather="instagram"></i></a>
+            <a href="#"><i data-feather="twitter"></i></a>
+            <a href="#"><i data-feather="facebook"></i></a>
+        </div>
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#menu">Menu</a>
+            <a href="#about">Tentang Kami</a>
+            <a href="contact">Kontak</a>
+        </div>
+
+        <div class="credit">
+            <p>Created By <a href="">Ghebi Armando</a> | &copy;2024</p>
+        </div>
+    </footer>
 
     <!--Feather Icons-->
     <script>
