--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <!--About Section-->
-    <section id="about" class="about">
+    <article id="about" class="about">
         <h2><span>Tentang</span> Kami</h2>
 
         <div class="row">
@@ -70,7 +70,7 @@
                     repudiandae provident pariatur in molestias eveniet autem.</p>
             </div>
         </div>
-    </section>
+    </article>
 
     <!--Menu Section-->
 
@@ -112,7 +112,7 @@
 
     <!--Contact Section-->
 
-    <section class="contact" id="contact">
+    <aside class="contact" id="contact">
         <h2><span>Kontak</span> Kami</h2>
         <p>Kami menyediakan berbagai macam menu dari makanan hingga
             minuman yang dapat memenuhi kebutuhan Anda.</p>
@@ -140,7 +140,7 @@
                 <button type="button" class="button">Submit</button>
             </form>
         </div>
-    </section>
+    </aside>
 
     <!--Footer Awal-->
     <footer>
